# sqd-band-gaps

./: LICENSE  MAINTAINERS.md  README.md
sqd-lattice/: README.md  main.zsh  main_hardware.zsh  pyproject.toml  run_hardware.zsh  run_main.zsh
sqd-lattice/bands_plot/: bands.py  fermi_levels  hfo2_bands_dft  hfo2_bands_paoflow.npy  plot_all.ipynb  plot_single.ipynb  pto2_bands_dft  pto2_bands_paoflow.npy  silicon_bands_dft  silicon_bands_paoflow.npy  zirconia_bands_dft  zirconia_bands_paoflow.npy
sqd-lattice/notebooks/: plot_hopping.ipynb  test_change_of_basis.ipynb  test_ham_ffsim.ipynb  test_hf.ipynb  transpiling_hardware.ipynb
sqd-lattice/plotting_scripts/: figure_1.py  figure_6.py  probabilities.py  subspace_dimension.py  subspace_dimension_hci.py  subspace_dimension_single.py
sqd-lattice/runs/hafnium_2/: bandgap_dict.json  base_config.yaml  data_dict.pkl  hardware_config.yaml
sqd-lattice/runs/hafnium_2/23e/: hci_config.yaml  results_pre_process.pkl  sqd_config.yaml  transpiled_hardware.qpy
sqd-lattice/runs/hafnium_2/24e/: results_pre_process.pkl  sqd_config.yaml  transpiled_hardware.qpy
sqd-lattice/runs/hafnium_2/25e/: results_pre_process.pkl  sqd_config.yaml  (+1 more)
sqd-lattice/runs/zirconia_2/: bandgap_dict.json  base_config.yaml  data_dict.pkl  hardware_config.yaml
sqd-lattice/scripts/: count_checker.py  make_circuits.py  run_ext_sqd.py  run_hardware.py  run_hci.py  run_hci_pbc.py  run_sqd.py  sample_qiskit.py
sqd-lattice/src/sqd_lattice/: __init__.py  circuits.py  ext_sqd.py  mps_aer.py  pre_process.py  sqd.py  sqd_dice.py  transpiling.py  util.py
(+297 files in other folders)
